--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   },
   "homepage": "https://github.com/shyynux/chatapp#readme",
   "dependencies": {
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "websocket": "^1.0.34"
+  },
+  "devDependencies": {
+    "@types/websocket": "^1.0.10"
   }
 }
