--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/websocket": "^1.0.10"
+    "@types/websocket": "^1.0.10",
+    "tailwindcss": "^3.4.0"
   }
 }
